# done-it-again

./: .editorconfig  .env  .eslintignore  .eslintrc.js  .gitignore  .prettierrc  .prettierrc.js  .stylelintrc.json  CNAME  README.md  _config.yml  analyze.py  analyze_test.py  cli.py  gatsby-config.js  gatsby-node.js  overrides.csv  package-lock.json  package.json  postcss.config.js  pyproject.toml  stats.py  stats_test.py  update.sh
.github/workflows/: autoupdate.yml  trigger-build.yml
_data/: stats.csv  stats_best_cps.csv  stats_daily.csv  stats_freq_tags.csv  stats_worst_cps.csv
_includes/: cp_ranks.html  section.html
docs/: _config.yml  done-it-again.html  index.html
docs/_data/: overrides.csv  stats.csv  stats_best_cps.csv  stats_daily.csv  stats_freq_tags.csv  stats_worst_cps.csv  tag_defs.yaml
docs/_includes/: cp_ranks.html  section.html
docs/_sass/: main.scss
src/: declarations.d.ts  tag_defs.yaml
src/components/: Article.module.css  Article.tsx  Bar.module.css  Bar.tsx  BestPractices.module.css  BestPractices.tsx  Footer.module.css  Footer.tsx  HallOfFame.tsx  HallOfFameRank.module.css  HallOfFameRank.tsx  Header.module.css  Header.tsx  Intro.module.css  Intro.tsx  Layout.module.css  Layout.tsx  Mark.tsx  NavBar.module.css  NavBar.tsx  Pie.module.css  Pie.tsx  Section.module.css  Section.tsx  SectionList.module.css  SectionList.tsx  Seo.tsx
src/pages/: 404.tsx  index.tsx
src/posts/: test.md
v2/: .editorconfig  .eslintrc.js  .gitignore  README.md  gatsby-config.js  gatsby-node.js  package-lock.json  package.json  tsconfig.json
(+7 files in other folders)
