[tool.poetry]
name = "newsmon"
version = "0.1.0"
description = ""
authors = ["kkyueing <kkyueing@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.3.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
mypy = "^0.770"
pytest = "^5.4.1"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
